# confer

./: .gitignore
confer/: Cargo.toml  build.rs
confer-server/: Cargo.toml
confer-server/migrations/2020-09-28-192158_create_configs/: down.sql  up.sql
confer-server/src/: main.rs  models.rs  schema.rs
confer/src/: lib.rs  main.rs
proto/: confer.proto
