[package]
name = "confer"
version = "0.1.0"
authors = ["Mitchell Grenier <mitchell.grenier@bitmex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "confer"
path = "src/lib.rs"

[dependencies]
aes-siv = "0.4.0"
env_logger = "0.7.1"
hex = "0.4.2"
hmac = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.8"
prost = "0.6"
rand = "*"
tonic = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.1"
tokio = { version = "0.2", features = ["full"] }

[build-dependencies]
tonic-build = "0.3"